--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-plugin-react-html-attrs": "^3.0.5",
     "vite": "^2.7.2"
   }
 }
